[package]
name = "gnss-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
bbqueue = "0.5"
chrono = "0.4"
mio = "0.8"
mio-serial = "5.0"
mio-timerfd = { git = "https://github.com/hugo-cuenca/mio-timerfd.git" }
mini-nmea = { git = "https://gitlab.com/blueluna/mini-nmea.git" }
ublox = { git = "https://github.com/blueluna/ublox.git", branch = "master" }
